tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__arrow_setback_scalar.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Arrow[{{0, 0}, {2, 0}}, 0.5]}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<polyline points="96.67,180.00 263.33,180.00" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
<polygon points="263.33,180.00 248.93,184.03 248.93,175.97" fill="rgb(0,0,0)"/>
</g>
</svg>
