tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__bspline_curve.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{BSplineCurve[{{0, 0}, {1, 2}, {2, 0}, {3, 1}}]}]\")"
---
<svg width="360" height="120" viewBox="0 0 360 120" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x120"><rect x="0" y="0" width="360.00" height="120.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x120)">
<polyline points="13.33,115.56 15.01,112.24 16.68,108.99 18.36,105.81 20.03,102.69 21.71,99.63 23.38,96.65 25.06,93.72 26.73,90.86 28.41,88.06 30.08,85.32 31.76,82.65 33.43,80.03 35.11,77.48 36.78,74.98 38.46,72.55 40.13,70.17 41.81,67.85 43.48,65.59 45.16,63.38 46.83,61.23 48.51,59.14 50.18,57.10 51.86,55.11 53.53,53.18 55.21,51.30 56.88,49.48 58.56,47.71 60.23,45.98 61.91,44.31 63.58,42.69 65.26,41.12 66.93,39.60 68.61,38.12 70.28,36.70 71.96,35.32 73.63,33.98 75.31,32.70 76.98,31.46 78.66,30.26 80.34,29.11 82.01,28.00 83.69,26.93 85.36,25.91 87.04,24.93 88.71,23.99 90.39,23.09 92.06,22.23 93.74,21.41 95.41,20.63 97.09,19.89 98.76,19.18 100.44,18.52 102.11,17.88 103.79,17.29 105.46,16.73 107.14,16.20 108.81,15.71 110.49,15.26 112.16,14.83 113.84,14.44 115.51,14.08 117.19,13.75 118.86,13.45 120.54,13.19 122.21,12.95 123.89,12.74 125.56,12.56 127.24,12.40 128.91,12.28 130.59,12.18 132.26,12.10 133.94,12.05 135.61,12.03 137.29,12.03 138.96,12.05 140.64,12.10 142.31,12.17 143.99,12.26 145.66,12.37 147.34,12.50 149.01,12.65 150.69,12.82 152.36,13.01 154.04,13.22 155.71,13.45 157.39,13.69 159.06,13.95 160.74,14.22 162.41,14.51 164.09,14.82 165.76,15.14 167.44,15.47 169.11,15.82 170.79,16.17 172.46,16.54 174.14,16.92 175.81,17.31 177.49,17.71 179.16,18.13 180.84,18.54 182.51,18.97 184.19,19.40 185.86,19.85 187.54,20.29 189.21,20.75 190.89,21.21 192.56,21.67 194.24,22.14 195.91,22.61 197.59,23.08 199.26,23.56 200.94,24.03 202.61,24.51 204.29,24.99 205.96,25.47 207.64,25.95 209.31,26.42 210.99,26.90 212.66,27.37 214.34,27.84 216.01,28.30 217.69,28.76 219.36,29.22 221.04,29.67 222.71,30.11 224.39,30.55 226.06,30.98 227.74,31.40 229.41,31.82 231.09,32.22 232.76,32.62 234.44,33.00 236.11,33.37 237.79,33.74 239.46,34.09 241.14,34.43 242.81,34.75 244.49,35.06 246.16,35.36 247.84,35.64 249.51,35.91 251.19,36.16 252.86,36.39 254.54,36.61 256.21,36.80 257.89,36.98 259.56,37.14 261.24,37.28 262.91,37.40 264.59,37.50 266.26,37.58 267.94,37.64 269.61,37.67 271.29,37.68 272.96,37.67 274.64,37.63 276.31,37.56 277.99,37.47 279.66,37.36 281.34,37.22 283.02,37.05 284.69,36.85 286.37,36.62 288.04,36.37 289.72,36.08 291.39,35.77 293.07,35.42 294.74,35.04 296.42,34.63 298.09,34.19 299.77,33.71 301.44,33.20 303.12,32.66 304.79,32.08 306.47,31.46 308.14,30.81 309.82,30.12 311.49,29.40 313.17,28.63 314.84,27.83 316.52,26.99 318.19,26.11 319.87,25.18 321.54,24.22 323.22,23.22 324.89,22.17 326.57,21.08 328.24,19.95 329.92,18.77 331.59,17.55 333.27,16.28 334.94,14.97 336.62,13.61 338.29,12.20 339.97,10.75 341.64,9.24 343.32,7.69 344.99,6.09 346.67,4.44" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
