tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__bspline_curve_closed.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{BSplineCurve[{{0, 0}, {1, 2}, {2, 0}, {3, 1}}, SplineClosed -> True]}]\")"
---
<svg width="360" height="163" viewBox="0 0 360 163" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x163"><rect x="0" y="0" width="360.00" height="163.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x163)">
<polyline points="94.24,6.04 97.69,6.17 101.14,6.58 104.58,7.24 108.03,8.15 111.48,9.30 114.93,10.68 118.37,12.27 121.82,14.07 125.27,16.08 128.72,18.27 132.16,20.64 135.61,23.19 139.06,25.89 142.51,28.74 145.95,31.74 149.40,34.86 152.85,38.11 156.30,41.46 159.74,44.92 163.19,48.47 166.64,52.11 170.09,55.81 173.53,59.58 176.98,63.40 180.43,67.27 183.88,71.16 187.32,75.09 190.77,79.02 194.22,82.96 197.67,86.89 201.11,90.81 204.56,94.71 208.01,98.57 211.46,102.38 214.90,106.14 218.35,109.84 221.80,113.46 225.25,117.00 228.69,120.44 232.14,123.78 235.59,127.01 239.04,130.12 242.48,133.09 245.93,135.93 249.38,138.61 252.83,141.13 256.27,143.47 259.72,145.64 263.17,147.61 266.62,149.39 270.06,150.96 273.50,152.33 276.93,153.51 280.34,154.50 283.72,155.32 287.08,155.96 290.40,156.44 293.68,156.76 296.91,156.93 300.09,156.96 303.22,156.85 306.28,156.62 309.28,156.26 312.20,155.78 315.04,155.20 317.79,154.51 320.46,153.73 323.03,152.86 325.50,151.91 327.86,150.89 330.10,149.80 332.23,148.65 334.24,147.44 336.12,146.19 337.86,144.90 339.46,143.58 340.91,142.24 342.21,140.88 343.36,139.50 344.34,138.12 345.15,136.75 345.79,135.38 346.25,134.03 346.52,132.71 346.61,131.41 346.49,130.15 346.18,128.94 345.66,127.78 344.92,126.68 343.97,125.64 342.79,124.67 341.38,123.79 339.74,122.99 337.85,122.28 335.72,121.68 333.34,121.18 330.69,120.79 327.79,120.53 324.62,120.40 321.17,120.40 317.45,120.53 313.47,120.79 309.24,121.18 304.78,121.68 300.08,122.28 295.17,122.99 290.06,123.79 284.75,124.67 279.26,125.64 273.60,126.68 267.78,127.78 261.81,128.94 255.70,130.15 249.46,131.41 243.11,132.71 236.65,134.03 230.10,135.38 223.47,136.75 216.77,138.12 210.01,139.50 203.20,140.88 196.35,142.24 189.47,143.58 182.58,144.90 175.69,146.19 168.80,147.44 161.93,148.65 155.09,149.80 148.29,150.89 141.54,151.91 134.86,152.86 128.25,153.73 121.72,154.51 115.29,155.20 108.97,155.78 102.76,156.26 96.69,156.62 90.75,156.85 84.97,156.96 79.35,156.93 73.90,156.76 68.64,156.44 63.58,155.96 58.72,155.32 54.08,154.50 49.68,153.51 45.51,152.33 41.59,150.96 37.94,149.39 34.56,147.61 31.46,145.64 28.62,143.47 26.04,141.13 23.72,138.61 21.65,135.93 19.83,133.09 18.24,130.12 16.89,127.01 15.77,123.78 14.87,120.44 14.19,117.00 13.72,113.46 13.46,109.84 13.39,106.14 13.52,102.38 13.84,98.57 14.35,94.71 15.03,90.81 15.89,86.89 16.91,82.96 18.10,79.02 19.44,75.09 20.93,71.16 22.56,67.27 24.34,63.40 26.25,59.58 28.28,55.81 30.44,52.11 32.72,48.47 35.11,44.92 37.60,41.46 40.20,38.11 42.89,34.86 45.66,31.74 48.52,28.74 51.46,25.89 54.48,23.19 57.56,20.64 60.70,18.27 63.89,16.08 67.14,14.07 70.43,12.27 73.76,10.68 77.12,9.30 80.51,8.15 83.92,7.24 87.35,6.58 90.80,6.17 94.24,6.04" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
