tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__bspline_curve_many_points.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{BSplineCurve[{{0,0},{1,3},{2,1},{3,4},{4,0},{5,2}}]}]\")"
---
<svg width="360" height="190" viewBox="0 0 360 190" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x190"><rect x="0" y="0" width="360.00" height="190.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x190)">
<polyline points="13.40,182.96 16.39,174.10 19.33,165.60 22.24,157.44 25.09,149.63 27.91,142.15 30.68,135.01 33.41,128.18 36.10,121.68 38.75,115.48 41.36,109.58 43.93,103.97 46.46,98.66 48.95,93.63 51.40,88.87 53.82,84.38 56.19,80.14 58.54,76.17 60.84,72.44 63.11,68.95 65.35,65.69 67.55,62.66 69.72,59.85 71.86,57.25 73.96,54.86 76.03,52.67 78.07,50.67 80.08,48.86 82.06,47.22 84.01,45.76 85.94,44.46 87.83,43.31 89.70,42.32 91.54,41.48 93.35,40.77 95.13,40.19 96.89,39.74 98.63,39.40 100.34,39.17 102.03,39.05 103.69,39.02 105.34,39.08 106.96,39.23 108.55,39.45 110.13,39.73 111.69,40.09 113.23,40.49 114.74,40.95 116.24,41.44 117.73,41.97 119.19,42.53 120.64,43.11 122.07,43.71 123.48,44.31 124.88,44.91 126.27,45.51 127.64,46.09 129.00,46.65 130.34,47.19 131.68,47.69 133.00,48.15 134.31,48.56 135.61,48.92 136.89,49.22 138.17,49.45 139.44,49.60 140.71,49.68 141.96,49.66 143.21,49.56 144.45,49.37 145.68,49.10 146.91,48.75 148.13,48.33 149.34,47.83 150.55,47.27 151.75,46.64 152.95,45.95 154.14,45.20 155.32,44.40 156.50,43.55 157.68,42.65 158.85,41.71 160.02,40.72 161.18,39.70 162.34,38.65 163.50,37.56 164.65,36.45 165.80,35.31 166.94,34.16 168.09,32.98 169.23,31.80 170.37,30.60 171.51,29.40 172.64,28.19 173.78,26.99 174.91,25.79 176.04,24.60 177.17,23.41 178.30,22.24 179.43,21.09 180.57,19.96 181.70,18.86 182.83,17.78 183.96,16.73 185.09,15.72 186.22,14.75 187.36,13.81 188.49,12.93 189.63,12.09 190.77,11.30 191.91,10.57 193.06,9.90 194.20,9.29 195.35,8.74 196.50,8.26 197.66,7.86 198.82,7.53 199.98,7.28 201.15,7.12 202.32,7.04 203.50,7.05 204.68,7.15 205.86,7.35 207.05,7.65 208.25,8.05 209.45,8.55 210.66,9.17 211.87,9.90 213.09,10.75 214.32,11.72 215.55,12.81 216.79,14.03 218.04,15.39 219.29,16.87 220.56,18.49 221.83,20.23 223.11,22.09 224.39,24.07 225.69,26.14 227.00,28.32 228.32,30.58 229.66,32.92 231.00,35.34 232.36,37.82 233.73,40.36 235.12,42.96 236.52,45.59 237.93,48.26 239.36,50.96 240.81,53.68 242.27,56.42 243.76,59.16 245.26,61.89 246.77,64.62 248.31,67.33 249.87,70.02 251.45,72.68 253.04,75.29 254.66,77.86 256.31,80.37 257.97,82.82 259.66,85.21 261.37,87.51 263.11,89.73 264.87,91.86 266.65,93.89 268.46,95.81 270.30,97.61 272.17,99.30 274.06,100.85 275.99,102.27 277.94,103.54 279.92,104.66 281.93,105.62 283.97,106.41 286.04,107.02 288.14,107.46 290.28,107.70 292.45,107.75 294.65,107.59 296.89,107.21 299.16,106.62 301.46,105.80 303.81,104.74 306.18,103.44 308.60,101.89 311.05,100.09 313.54,98.01 316.07,95.67 318.64,93.04 321.25,90.13 323.90,86.91 326.59,83.40 329.32,79.58 332.09,75.43 334.91,70.96 337.76,66.16 340.67,61.02 343.61,55.53 346.60,49.68" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
