tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__bspline_curve_spline_degree_1_is_polyline.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{BSplineCurve[{{0, 0}, {1, 2}, {2, 0}, {3, 1}}, SplineDegree -> 1]}]\")"
---
<svg width="360" height="239" viewBox="0 0 360 239" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x239"><rect x="0" y="0" width="360.00" height="239.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x239)">
<polyline points="13.33,230.05 15.01,226.70 16.68,223.35 18.36,220.00 20.03,216.65 21.71,213.30 23.38,209.95 25.06,206.60 26.73,203.25 28.41,199.90 30.08,196.55 31.76,193.20 33.43,189.85 35.11,186.50 36.78,183.15 38.46,179.80 40.13,176.45 41.81,173.10 43.48,169.75 45.16,166.40 46.83,163.05 48.51,159.70 50.18,156.35 51.86,153.00 53.53,149.65 55.21,146.30 56.88,142.95 58.56,139.60 60.23,136.25 61.91,132.90 63.58,129.55 65.26,126.20 66.93,122.85 68.61,119.50 70.28,116.15 71.96,112.80 73.63,109.45 75.31,106.10 76.98,102.75 78.66,99.40 80.34,96.05 82.01,92.70 83.69,89.35 85.36,86.00 87.04,82.65 88.71,79.30 90.39,75.95 92.06,72.60 93.74,69.25 95.41,65.90 97.09,62.55 98.76,59.20 100.44,55.85 102.11,52.50 103.79,49.15 105.46,45.80 107.14,42.45 108.81,39.10 110.49,35.75 112.16,32.40 113.84,29.05 115.51,25.70 117.19,22.35 118.86,19.00 120.54,15.65 122.21,12.30 123.89,8.95 125.56,10.06 127.24,13.41 128.91,16.76 130.59,20.11 132.26,23.46 133.94,26.81 135.61,30.16 137.29,33.51 138.96,36.86 140.64,40.21 142.31,43.56 143.99,46.91 145.66,50.26 147.34,53.62 149.01,56.97 150.69,60.32 152.36,63.67 154.04,67.02 155.71,70.37 157.39,73.72 159.06,77.07 160.74,80.42 162.41,83.77 164.09,87.12 165.76,90.47 167.44,93.82 169.11,97.17 170.79,100.52 172.46,103.87 174.14,107.22 175.81,110.57 177.49,113.92 179.16,117.27 180.84,120.62 182.51,123.97 184.19,127.32 185.86,130.67 187.54,134.02 189.21,137.37 190.89,140.72 192.56,144.07 194.24,147.42 195.91,150.77 197.59,154.12 199.26,157.47 200.94,160.82 202.61,164.17 204.29,167.52 205.96,170.87 207.64,174.22 209.31,177.57 210.99,180.92 212.66,184.27 214.34,187.62 216.01,190.97 217.69,194.32 219.36,197.67 221.04,201.02 222.71,204.37 224.39,207.72 226.06,211.07 227.74,214.42 229.41,217.77 231.09,221.12 232.76,224.47 234.44,227.82 236.11,229.49 237.79,227.82 239.46,226.14 241.14,224.47 242.81,222.79 244.49,221.12 246.16,219.44 247.84,217.77 249.51,216.09 251.19,214.42 252.86,212.74 254.54,211.07 256.21,209.39 257.89,207.72 259.56,206.04 261.24,204.37 262.91,202.69 264.59,201.02 266.26,199.34 267.94,197.67 269.61,195.99 271.29,194.32 272.96,192.64 274.64,190.97 276.31,189.29 277.99,187.62 279.66,185.94 281.34,184.27 283.02,182.59 284.69,180.92 286.37,179.24 288.04,177.57 289.72,175.89 291.39,174.22 293.07,172.54 294.74,170.87 296.42,169.19 298.09,167.52 299.77,165.84 301.44,164.17 303.12,162.49 304.79,160.82 306.47,159.14 308.14,157.47 309.82,155.79 311.49,154.12 313.17,152.44 314.84,150.77 316.52,149.09 318.19,147.42 319.87,145.74 321.54,144.07 323.22,142.39 324.89,140.72 326.57,139.04 328.24,137.37 329.92,135.69 331.59,134.02 333.27,132.34 334.94,130.67 336.62,128.99 338.29,127.32 339.97,125.64 341.64,123.97 343.32,122.29 344.99,120.62 346.67,118.94" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
