tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__bspline_curve_spline_degree_2.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{BSplineCurve[{{0,0},{1,3},{2,1},{3,4},{4,0},{5,2}}, SplineDegree -> 2]}]\")"
---
<svg width="360" height="226" viewBox="0 0 360 226" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x226"><rect x="0" y="0" width="360.00" height="226.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x226)">
<polyline points="13.54,217.63 16.20,209.71 18.84,202.00 21.45,194.51 24.03,187.23 26.59,180.17 29.12,173.32 31.62,166.69 34.09,160.28 36.54,154.07 38.96,148.09 41.36,142.32 43.73,136.76 46.07,131.42 48.38,126.30 50.67,121.39 52.93,116.69 55.16,112.22 57.36,107.95 59.54,103.90 61.70,100.07 63.82,96.45 65.92,93.05 67.99,89.86 70.04,86.89 72.05,84.13 74.04,81.59 76.01,79.26 77.94,77.15 79.85,75.25 81.74,73.57 83.59,72.10 85.42,70.85 87.23,69.82 89.00,69.00 90.75,68.39 92.47,68.00 94.17,67.83 95.83,67.87 97.47,68.12 99.09,68.59 100.68,69.28 102.24,70.18 103.77,71.30 105.28,72.63 106.76,74.18 108.21,75.94 109.63,77.92 111.03,80.11 112.41,82.52 113.75,85.13 115.09,87.70 116.43,90.14 117.77,92.45 119.10,94.62 120.44,96.66 121.78,98.57 123.12,100.33 124.46,101.97 125.80,103.47 127.13,104.83 128.47,106.06 129.81,107.16 131.15,108.12 132.49,108.95 133.83,109.64 135.16,110.20 136.50,110.62 137.84,110.91 139.18,111.07 140.52,111.09 141.86,110.97 143.20,110.72 144.53,110.34 145.87,109.82 147.21,109.17 148.55,108.38 149.89,107.46 151.23,106.41 152.56,105.22 153.90,103.89 155.24,102.43 156.58,100.84 157.92,99.11 159.26,97.25 160.59,95.25 161.93,93.12 163.27,90.85 164.61,88.45 165.95,85.91 167.29,83.24 168.62,80.44 169.96,77.50 171.30,74.43 172.64,71.22 173.98,67.88 175.32,64.40 176.65,60.79 177.99,57.04 179.33,53.16 180.67,49.19 182.01,45.36 183.35,41.72 184.68,38.27 186.02,35.01 187.36,31.94 188.70,29.05 190.04,26.35 191.38,23.85 192.71,21.53 194.05,19.39 195.39,17.45 196.73,15.69 198.07,14.13 199.41,12.75 200.74,11.56 202.08,10.56 203.42,9.74 204.76,9.12 206.10,8.68 207.44,8.43 208.77,8.37 210.11,8.50 211.45,8.81 212.79,9.32 214.13,10.01 215.47,10.89 216.80,11.96 218.14,13.22 219.48,14.67 220.82,16.30 222.16,18.12 223.50,20.13 224.84,22.33 226.17,24.72 227.51,27.30 228.85,30.06 230.19,33.01 231.53,36.15 232.87,39.48 234.20,43.00 235.54,46.71 236.88,50.60 238.22,54.68 239.56,58.95 240.90,63.41 242.23,68.06 243.57,72.89 244.91,77.92 246.25,83.13 247.59,88.42 248.97,93.50 250.37,98.37 251.79,103.02 253.24,107.46 254.72,111.69 256.23,115.70 257.76,119.49 259.32,123.07 260.91,126.43 262.53,129.58 264.17,132.51 265.83,135.23 267.53,137.73 269.25,140.01 271.00,142.09 272.77,143.94 274.58,145.58 276.41,147.01 278.26,148.22 280.15,149.22 282.06,150.00 283.99,150.56 285.96,150.91 287.95,151.04 289.96,150.96 292.01,150.67 294.08,150.16 296.18,149.43 298.30,148.49 300.46,147.33 302.64,145.96 304.84,144.37 307.07,142.57 309.33,140.55 311.62,138.32 313.93,135.87 316.27,133.21 318.64,130.33 321.04,127.24 323.46,123.93 325.91,120.40 328.38,116.66 330.88,112.71 333.41,108.54 335.97,104.15 338.55,99.55 341.16,94.74 343.80,89.71 346.46,84.46" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
